Fix URL deprecations